Changelog for logilab database package
======================================

2010-06-21  --  1.0.4
    * enhanced sqlserver support:

    * list_indices implementation

    * sql_change_col_type, sql_set_null_allowed implementation

    * new sql_concat_string method on db-helpers, with specific implementation
      for sqlserver

    * fix sqlite datetime parsing



2010-06-11  --  1.0.3
    * add support for wildcard search when using postgres (require postgres >= 8.4)

    * repair backup/restore for sqlserver

    * fix licensing information (LGPL)



2010-04-11  --  1.0.2
    * new SUBSTRING function



2010-03-18  --  1.0.1
    * remove non existant test/data dir from __pkginfo__.includes_dir



2010-03-16  --  1.0.0
    * initial release, containing code originally in logilab.common.db, logilab.
      common.adbh, and the indexer package


