@@ -1,6 +1,13 @@
 Changelog for logilab database package
 ======================================
 
+ --
+    * provide new change_col_type / set_null_allowed method on advanced
+      helpers, similar to sql_change_col_type / sql_set_null_allowed but
+      taking a cursor as argument and actually doing necessary stuff. You
+      should prefer those method to the sql_* ones since in some case we're
+      unable to do what's necessary in those (eg sqlserver2005).
+
 2010-06-21  --  1.0.4
     * enhanced sqlserver support:
 
